Client SPA implementated

--- a/src/client/src/style/app.less
+++ b/src/client/src/style/app.less
@@ -1,7 +1,15 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
-/* styles in src/style directory are applied to the whole page */
+@import 'components/footer';
+
+@import 'components/main';
+@import 'components/signup';
+@import 'components/feeds';
+
 body {
-  background: red;
-  color: #fff;
+  background-color: #ddd;
+}
+
+.page-content {
+  margin: 50px auto;
 }
