--- a/src/client/src/style/components/feeds.less
+++ b/src/client/src/style/components/feeds.less
@@ -7,6 +7,7 @@
     background-color: #fff;
     box-shadow: 0px 0px 1px #999;
     padding: 0;
+    margin-bottom: 8px;
 
     .feed-card-content {
       display: block;
